--- a/public/app/img/imgList.html
+++ b/public/app/img/imgList.html
@@ -1,1 +1,1 @@
-<div id="blue" hg-view="hg-view"><div class="container"><div class="row"><h3>My Images</h3></div></div></div><div class="container mtb"><div class="row"></div></div>
+<div class="container mtb"><div class="row"><div ng-repeat="img in imgs" class="col-sm-5 col-md-3"><div class="thumbnail"><a href="#/img/{{img.code}}"><img ng-src="/img/{{img.code}}.png" style="pointer:finget;height: 150px; width: 100%; display: block;"/></a><div class="caption"><span>{{img.code}}.png - 130kb</span><p>Some text</p></div></div></div></div></div>
